--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "bootstrap": "^5.3.4",
     "emailjs-com": "^3.2.0",
     "gsap": "^3.12.7",
+    "lucide-react": "^0.548.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.1",
     "three": "^0.175.0"
   },
